index menu added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container mx-auto py-9">        
 
         <div class="w-48 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+            <a href="https://janzenfaidiban.github.io/components/page-sections/index.html" aria-current="true" class="block py-2 px-4 w-full text-white bg-blue-700 rounded-t-lg border-b border-gray-200 cursor-pointer dark:bg-gray-800 dark:border-gray-600" target="_blank">
+                Index
+            </a>
             <a href="https://janzenfaidiban.github.io/components/page-sections/judul-kami.html" aria-current="true" class="block py-2 px-4 w-full text-white bg-blue-700 rounded-t-lg border-b border-gray-200 cursor-pointer dark:bg-gray-800 dark:border-gray-600" target="_blank">
                 Page Sections
             </a>
@@ -34,6 +37,9 @@
     <div class="container mx-auto py-9">        
 
         <div class="w-48 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+            <a href="https://janzenfaidiban.github.io/components/page-examples/index.html" aria-current="true" class="block py-2 px-4 w-full text-white bg-blue-700 rounded-t-lg border-b border-gray-200 cursor-pointer dark:bg-gray-800 dark:border-gray-600" target="_blank">
+                Index
+            </a>
             <a href="https://janzenfaidiban.github.io/components/page-examples/judul-kami.html" aria-current="true" class="block py-2 px-4 w-full text-white bg-blue-700 rounded-t-lg border-b border-gray-200 cursor-pointer dark:bg-gray-800 dark:border-gray-600" target="_blank">
                 Page Examples
             </a>
