--- a/page-sections/galeri-foto.html
+++ b/page-sections/galeri-foto.html
@@ -1,1 +1,56 @@
-galeri foto
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+
+    <div class="bg-gray-50 my-9 py-9 border">
+
+        <!-- container start -->
+        <div class="container mx-auto py-9">
+            
+            <div class="w-1/2 mx-auto text-center mb-9">
+                <h1 class="text-6xl font-bold">Galeri Foto</h1>
+                <p class="my-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat repudiandae, eum, nostrum numquam doloremque similique mollitia eligendi voluptatum sequi aliquam veritatis facilis maiores? Est, natus.</p>
+            </div>
+
+            <div class="grid grid-cols-4 gap-9 text-left">
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+                <div class="bg-gray-700 h-full">
+                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                </div>
+            </div>
+
+        </div>
+        <!-- container end -->
+        
+    </div>
+
+</body>
+
+</html>
