--- a/page-sections/galeri-foto.html
+++ b/page-sections/galeri-foto.html
@@ -21,28 +21,28 @@
 
             <div class="grid grid-cols-4 gap-9 text-left">
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=1380&t=st=1664326648~exp=1664327248~hmac=4eb066d55dd8f2a3d2d6f68739a4075e36bca5a5dc98e1d384d5ef387a0d9763" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/beautiful-diamond-beach-penida-island-bali-indonesia_181624-41884.jpg?w=1380&t=st=1664326829~exp=1664327429~hmac=f2f49a08e8570f067731a2d23625795cad37451adf2703715d8100d466f1f2b5" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/river-surrounded-by-forests-cloudy-sky-thuringia-germany_181624-30863.jpg?w=1380&t=st=1664326856~exp=1664327456~hmac=6ad2fbd3e0a7c67e734fe8c33c4c7ee0808d60e2f2d963eccd240c1b89a6a5d0" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/seljalandsfoss-waterfall-during-sunset-beautiful-waterfall-iceland_335224-596.jpg?w=1380&t=st=1664326723~exp=1664327323~hmac=be5a5d0c89c75210730e20b58a06313b94c14af79b73f16737503f4788854d99" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/aerial-view-kelingking-beach-nusa-penida-island-bali-indonesia_335224-309.jpg?w=1380&t=st=1664326737~exp=1664327337~hmac=8f2d27844b2f55c82e28d6fc05faaa0d5e39a3d53185ded71047632699a00c20" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/cows-eating-lush-grass-green-field-front-fuji-mountain-japan_335224-36.jpg?w=1380&t=st=1664326755~exp=1664327355~hmac=2a5be012eb6aab73e496e1fcdaa0995bfc3d9b362ff7ec8514ecd6ddada03afd" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/vestrahorn-mountains-stokksnes-iceland_335224-667.jpg?w=1480&t=st=1664326705~exp=1664327305~hmac=f196d760d8c284cd4d5a0e593b4b0470cde3193d93f98336b2334343f8e38e4a" alt="Image" class="rounded">
                 </div>
                 <div class="bg-gray-700 h-full">
-                    <img src="https://img.okezone.com/content/2017/07/15/406/1736985/wow-ternyata-suku-asmat-papua-titisan-dewa-njt6pzi0Pe.jpg" alt="Image" class="rounded">
+                    <img src="https://img.freepik.com/free-photo/beautiful-shot-forest-with-tall-trees-bright-sun-rays-shining_181624-11053.jpg?w=1380&t=st=1664326785~exp=1664327385~hmac=32416793830cf220a819e5b9c395ddc2c12118256d22ecf9368bad1203f11a63" alt="Image" class="rounded">
                 </div>
             </div>
 
