sm gallery updated

--- a/page-sections/galeri-foto.html
+++ b/page-sections/galeri-foto.html
@@ -19,7 +19,7 @@
                 <p class="my-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat repudiandae, eum, nostrum numquam doloremque similique mollitia eligendi voluptatum sequi aliquam veritatis facilis maiores? Est, natus.</p>
             </div>
 
-            <div class="grid xl:grid-cols-4 lg:grid-cols-3 sm:grid-cols-2 gap-3">
+            <div class="grid xl:grid-cols-4 lg:grid-cols-3 sm:grid-cols-2 sm:gap-3">
                 <div class="bg-gray-700">
                     <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=1380&t=st=1664326648~exp=1664327248~hmac=4eb066d55dd8f2a3d2d6f68739a4075e36bca5a5dc98e1d384d5ef387a0d9763" alt="Image" class="w-full h-full">
                 </div>
