tim kami updated

--- a/page-sections/galeri-foto.html
+++ b/page-sections/galeri-foto.html
@@ -16,7 +16,7 @@
             
             <div class="lg:w-1/2 mx-auto text-center mb-9">
                 <h1 class="text-6xl font-bold">Galeri Foto</h1>
-                <p class="my-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat repudiandae, eum, nostrum numquam doloremque similique mollitia eligendi voluptatum sequi aliquam veritatis facilis maiores? Est, natus.</p>
+                <p class="my-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nesciunt nulla ullam consequatur voluptatum, dolorum nostrum rerum ipsam repudiandae blanditiis, officiis est perferendis, magnam voluptas eum omnis modi sit. Animi?</p>
             </div>
 
             <div class="grid xl:grid-cols-4 lg:grid-cols-3 sm:grid-cols-2 sm:gap-3">
